# bailiff

./: Cargo.toml  README.md
bailiff-bitcoin/: Cargo.toml
bailiff-bitcoin/src/: main.rs
bailiff-ethereum/: Cargo.toml
bailiff-ethereum/src/: main.rs
bailiff-polkadot/: Cargo.toml
bailiff-polkadot/metadata/: acala.scale
bailiff-polkadot/migrations/: 20220414164053_disposals.sql
bailiff-polkadot/src/: karura.rs  main.rs  moonbeam.rs  polkadot.rs
bailiff-solana/: Cargo.toml
cli/: main.rs
metadata/: astar.scale  karura.scale  moonbeam.scale  moonriver.scale  shiden.scale
migrations/: 20220420213154_purchases.sql  20220420213233_swaps.sql  20220425074541_salary.sql  20220512113547_loans.sql  20221119160132_airdrops.sql  20221119160145_rewards.sql
scripts/: download-metadata.sh  insert-disposals.sh  insert-purchases.sh  insert-salary.sh  insert-swaps.sh
server/: acala.rs  astar.rs  bitcoin.rs  config.rs  ethereum.rs  kusama.rs  main.rs
