[workspace]
default-members = []
exclude = []
members = ["bailiff-bitcoin", "bailiff-ethereum", "bailiff-polkadot"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.93"
bigdecimal = "0.4.6"
clap = "4.5.20"
colored = "2.1.0"
futures = "0.3.31"
hex = "0.4.3"
prometheus = "0.13.4"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres"] }
thiserror = "1.0.63"
tokio = { version = "1.41.1", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-opentelemetry = "0.26.0"
tracing-subscriber = "0.3.18"
