[package]
edition = "2021"
name = "bailiff-bitcoin"
version = "0.0.1"

[[bin]]
name = "bailiff-bitcoin"
path = "src/main.rs"

[dependencies]
btcrpc = { package = "bitcoincore-rpc", git = "https://github.com/rust-bitcoin/rust-bitcoincore-rpc" }

anyhow = { workspace = true }
bigdecimal = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
prometheus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
