[package]
edition = "2021"
name = "bailiff-solana"
version = "0.0.1"

[[bin]]
name = "bailiff-solana"
path = "src/main.rs"

[dependencies]
anchor-client = "0.30.1"

anyhow = "1.0.93"
bigdecimal = "0.4.6"
clap = "4.5.20"
colored = "2.1.0"
futures = "0.3.31"
hex = "0.4.3"
prometheus = "0.13.4"
serde = "1.0.215"
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1.41.1", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-opentelemetry = "0.26.0"
tracing-subscriber = "0.3.18"

[patch.crates-io.aes-gcm-siv]
git = "https://github.com/RustCrypto/AEADs"
rev = "6105d7a5591aefa646a95d12b5e8d3f55a9214ef"

[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "c14774464c4d38de553c6ef2f48a10982c1b4801"
